# susonwaiba.github.io

./: .gitignore  404.html  CNAME  Cargo.toml  README.md  app.js  config.toml  index.html  justfile  package-lock.json  package.json  search_index.en.js  sitemap.xml  style.css  style.scss  tailwind.config.js  theme.toml
.github/workflows/: main.yml
about/: index.html
assets/exports/: about.json
blog/: index.html
blog/arch-minimal-setup/: index.html
blog/neovim-pde/: index.html
blog/terminal-workflow/: index.html
content/: about.md
content/blog/: 2023-01-18_arch-minimal-setup.md  2023-02-22_neovim-pde.md  2023-03-10_terminal-workflow.md  _index.md
css/: style.css  tailwind.css
docs/: 404.html  index.html  robots.txt  search_index.en.js  susonwaiba-6bd76bef6de0ac6b.js  susonwaiba-6bd76bef6de0ac6b_bg.wasm
docs/about/: index.html
docs/blog/: index.html
docs/tags/: index.html
md_to_json/: Cargo.toml
md_to_json/about/: 2012.md  2013.md  2014.md  2015.md  2016.md  2017.md  2018.md  2019.md  2020.md  2021.md  2022.md  2023.md
md_to_json/notes/: arch-minimal-setup.md  neovim.md  terminal-workflow.md
md_to_json/src/: about.rs  file.rs  main.rs  note.rs
src/: api.rs  lib.rs  main.rs  model.rs  page.rs
src/model/: about.rs  note.rs
src/page/: about_page.rs  home_page.rs  note_page.rs  notes_page.rs
static/: style.min.css
tags/: index.html
tags/editor/: index.html
templates/: 404.html  base.html  footer.html  header.html  index.html  page.html  section.html  taxonomy_list.html  taxonomy_single.html  theme_switcher.html  user_card.html
(+14 files in other folders)
