[package]
name = "susonwaiba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
leptos = { version = "0.2", default-features = false }
leptos_router = { version = "0.2", features = ["csr"] }
leptos_meta = { version = "0.2", features = ["csr"] }
console_log = "0.2"
log = "0.4"
futures = "0.3"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3.60", features = [
    "Window",
    "Document",
    "HtmlDocument",
    "Location",
    "Storage",
] }

[features]
default = ["csr"]
csr = ["leptos/csr"]

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
