[package]
name = "md_to_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.23", features = ["serde"] }
pulldown-cmark = { version = "0.9.2", default-features = false }
titlecase = "2.2.1"
